# moducard_ros

./: .gitignore  .gitmodules
examples/: ros_plugin_driver_config.yaml
mc_can_driver/: CMakeLists.txt  package.xml
mc_can_driver/include/mc_can_driver/: can_linux_driver.hpp
mc_can_driver/src/: can_linux_driver.cpp
mc_plugin_base/: CMakeLists.txt  package.xml
mc_plugin_driver/: CMakeLists.txt  package.xml
mc_plugin_driver/include/mc_plugin_driver/: base_module_dummy.hpp  base_module_dummy_ros.hpp  base_module_dummy_types.hpp  basic_module_types.hpp  float_int16.hpp  mc_param.hpp  mc_plugin_driver.hpp  mc_plugin_exporter.hpp  mc_slave_driver.hpp  ros_param_loaded.hpp  super_types.hpp  timing.hpp
mc_plugin_driver/src/: mc_plugin_driver.cpp  mc_plugin_driver_node.cpp
mcan_base_module_dummy_msgs/: CMakeLists.txt  package.xml  plugins.xml
mcan_base_module_dummy_msgs/include/mcan_base_module_dummy_msgs/: conversions.hpp  mcan_base_module_dummy.hpp  mcan_base_module_dummy_types.hpp
mcan_base_module_dummy_msgs/msg/: DiscoverDevices.msg  DummyCommand.msg  EnterConfigurationMode.msg  FlashIndicatorLed.msg  SetDeviceNodeId.msg
mcan_base_module_dummy_msgs/src/: mcan_base_module_dummy_plugin.cpp
mcan_basic_module_msgs/: CMakeLists.txt  package.xml
mcan_basic_module_msgs/include/mcan_basic_module_msgs/: conversions.hpp  mcan_basic_module_types.hpp
mcan_basic_module_msgs/msg/: DeviceIdentifier.msg  DeviceInfo.msg  DeviceNodeIdentifier.msg  DeviceStatus.msg  GetHardwareType.msg  HardwareType.msg  PingModule.msg
